@@ -1,30 +1,30 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
 import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
-import dk.kvalitetsit.hjemmebehandling.api.PartialUpdateQuestionnaireResponseRequest;
-import dk.kvalitetsit.hjemmebehandling.api.QuestionnaireResponseDto;
-import dk.kvalitetsit.hjemmebehandling.constants.ExaminationStatus;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.BadRequestException;
-import dk.kvalitetsit.hjemmebehandling.api.PaginatedList;
 import dk.kvalitetsit.hjemmebehandling.model.QuestionnaireResponseModel;
 import dk.kvalitetsit.hjemmebehandling.service.AuditLoggingService;
 import dk.kvalitetsit.hjemmebehandling.service.QuestionnaireResponseService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
 import dk.kvalitetsit.hjemmebehandling.types.Pagination;
-import io.swagger.v3.oas.annotations.tags.Tag;
+import org.openapitools.api.QuestionnaireResponseApi;
+import org.openapitools.model.ExaminationStatusDto;
+import org.openapitools.model.PaginatedListQuestionnaireResponseDto;
+import org.openapitools.model.PartialUpdateQuestionnaireResponseRequest;
+import org.openapitools.model.QuestionnaireResponseDto;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @RestController
-@Tag(name = "QuestionnaireResponse", description = "API for manipulating and retrieving QuestionnaireResponses.")
-public class QuestionnaireResponseController extends BaseController {
+
+public class QuestionnaireResponseController extends BaseController implements QuestionnaireResponseApi {
     private static final Logger logger = LoggerFactory.getLogger(QuestionnaireResponseController.class);
 
     private final QuestionnaireResponseService questionnaireResponseService;
@@ -37,77 +37,63 @@ public class QuestionnaireResponseController extends BaseController {
         this.dtoMapper = dtoMapper;
     }
 
-    @PostMapping(value = "/v1/questionnaireresponse")
-    public void createQuestionnaireResponse(QuestionnaireResponseDto questionnaireResponse) {
+
+    @Override
+    public ResponseEntity<Void> createQuestionnaireResponse(QuestionnaireResponseDto questionnaireResponse) {
         throw new UnsupportedOperationException();
     }
 
-    @GetMapping(value = "/v1/questionnaireresponse/{carePlanId}")
-    public ResponseEntity<PaginatedList<QuestionnaireResponseDto>> getQuestionnaireResponsesByCarePlanId(
-            @PathVariable("carePlanId") String carePlanId,
-            @RequestParam("questionnaireIds") List<String> questionnaireIds,
-            int pageNumber,
-            int pageSize
-    ) {
-        if(carePlanId == null || questionnaireIds == null || questionnaireIds.isEmpty()) {
+    @Override
+    public ResponseEntity<PaginatedListQuestionnaireResponseDto> getQuestionnaireResponsesByCarePlanId(String carePlanId, List<String> questionnaireIds, Integer pageNumber, Integer pageSize) {
+        if (carePlanId == null || questionnaireIds == null || questionnaireIds.isEmpty()) {
             throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
         }
 
         try {
-            Pagination pagination = new Pagination(pageNumber,pageSize);
+            Pagination pagination = new Pagination(pageNumber, pageSize);
 
             List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponses(carePlanId, questionnaireIds);
 
-            auditLoggingService.log("GET /v1/questionnaireresponse/"+carePlanId, questionnaireResponses.stream().map(QuestionnaireResponseModel::getPatient).collect(Collectors.toList()));
+            auditLoggingService.log("GET /v1/questionnaireresponse/" + carePlanId, questionnaireResponses.stream().map(QuestionnaireResponseModel::getPatient).toList());
 
-            var dtos = questionnaireResponses
-                    .stream()
-                    .map(dtoMapper::mapQuestionnaireResponseModel)
-                    .collect(Collectors.toList());
+            var dtos = questionnaireResponses.stream().map(dtoMapper::mapQuestionnaireResponseModel).toList();
 
-            return ResponseEntity.ok(new PaginatedList<>(dtos, pagination));
-        }
-        catch(AccessValidationException | ServiceException e) {
+            var response = new PaginatedListQuestionnaireResponseDto();
+
+            response.setList(dtos);
+            response.setLimit(Optional.of(pagination.getLimit()));
+            response.setOffset(Optional.of(pagination.getOffset()));
+            response.setTotal(Optional.of(dtos.size()));
+
+            return ResponseEntity.ok(response);
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not look up questionnaire responses by cpr and questionnaire ids", e);
             throw toStatusCodeException(e);
         }
     }
 
-    @GetMapping(value = "/v1/questionnaireresponse")
-    public ResponseEntity<List<QuestionnaireResponseDto>> getQuestionnaireResponsesByStatus(
-            @RequestParam("status") List<ExaminationStatus> statuses,
-            int pageNumber,
-            int pageSize
-    ) {
-        if(statuses == null || statuses.isEmpty()) {
+    @Override
+    public ResponseEntity<List<QuestionnaireResponseDto>> getQuestionnaireResponsesByStatus(List<ExaminationStatusDto> status, Integer pageNumber, Integer pageSize) {
+        if (status == null || status.isEmpty()) {
             throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
         }
-
         try {
-            List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponsesByStatus(statuses, new Pagination(pageNumber, pageSize));
-            auditLoggingService.log("GET /v1/questionnaireresponse/", questionnaireResponses.stream().map(QuestionnaireResponseModel::getPatient).collect(Collectors.toList()));
-            return ResponseEntity.ok(questionnaireResponses.stream().map(dtoMapper::mapQuestionnaireResponseModel).collect(Collectors.toList()));
-        }
-        catch(AccessValidationException | ServiceException e) {
+            List<QuestionnaireResponseModel> questionnaireResponses = questionnaireResponseService.getQuestionnaireResponsesByStatus(status.stream().map(dtoMapper::mapExaminationStatusDto).toList(), new Pagination(pageNumber, pageSize));
+            auditLoggingService.log("GET /v1/questionnaireresponse/", questionnaireResponses.stream().map(QuestionnaireResponseModel::getPatient).toList());
+            return ResponseEntity.ok(questionnaireResponses.stream().map(dtoMapper::mapQuestionnaireResponseModel).toList());
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not look up questionnaire responses by status", e);
             throw toStatusCodeException(e);
         }
     }
 
-    @PatchMapping(value = "/v1/questionnaireresponse/{id}")
-    public ResponseEntity<Void> patchQuestionnaireResponse(
-            @PathVariable String id,
-            @RequestBody PartialUpdateQuestionnaireResponseRequest request
-    ) {
-        if(request.getExaminationStatus() == null) {
-            throw new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE);
-        }
 
+    @Override
+    public ResponseEntity<Void> patchQuestionnaireResponse(String id, PartialUpdateQuestionnaireResponseRequest partialUpdateQuestionnaireResponseRequest) {
         try {
-            QuestionnaireResponseModel questionnaireResponse = questionnaireResponseService.updateExaminationStatus(id, request.getExaminationStatus());
-            auditLoggingService.log("PATCH /v1/questionnaireresponse/"+id, questionnaireResponse.getPatient());
-        }
-        catch(AccessValidationException | ServiceException e) {
+            QuestionnaireResponseModel questionnaireResponse = questionnaireResponseService.updateExaminationStatus(id, dtoMapper.mapExaminationStatusDto(partialUpdateQuestionnaireResponseRequest.getExaminationStatus().orElseThrow(() -> new BadRequestException(ErrorDetails.PARAMETERS_INCOMPLETE))));
+            auditLoggingService.log("PATCH /v1/questionnaireresponse/" + id, questionnaireResponse.getPatient());
+        } catch (AccessValidationException | ServiceException e) {
             logger.error("Could not update questionnaire response", e);
             throw toStatusCodeException(e);
         }
