@@ -7,30 +7,28 @@ import ca.uhn.fhir.rest.api.SortOrderEnum;
 import ca.uhn.fhir.rest.api.SortSpec;
 import ca.uhn.fhir.rest.client.api.IGenericClient;
 import ca.uhn.fhir.rest.gclient.*;
-import dk.kvalitetsit.hjemmebehandling.constants.ExaminationStatus;
 import dk.kvalitetsit.hjemmebehandling.constants.SearchParameters;
 import dk.kvalitetsit.hjemmebehandling.constants.Systems;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.context.UserContextProvider;
+import dk.kvalitetsit.hjemmebehandling.model.ExaminationStatus;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ErrorKind;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
 import org.hl7.fhir.r4.model.*;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.sql.Date;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class FhirClient {
     private static final Logger logger = LoggerFactory.getLogger(FhirClient.class);
-
+    private static final List<ResourceType> UNTAGGED_RESOURCE_TYPES = List.of(ResourceType.Patient);
     private final FhirContext context;
     private final String endpoint;
     private final UserContextProvider userContextProvider;
-
-    private static final List<ResourceType> UNTAGGED_RESOURCE_TYPES = List.of(ResourceType.Patient);
 
     public FhirClient(FhirContext context, String endpoint, UserContextProvider userContextProvider) {
         this.context = context;
@@ -47,7 +45,6 @@ public class FhirClient {
 
         return lookupCarePlansByCriteria(criteria);
     }
-
 
 
     public FhirLookupResult lookupActivePlanDefinitionsUsingQuestionnaireWithId(String questionnaireId) throws ServiceException {
@@ -76,7 +73,7 @@ public class FhirClient {
         var patientCriterion = CarePlan.PATIENT.hasId(patientId);
         var organizationCriterion = buildOrganizationCriterion();
         var criteria = new ArrayList<ICriterion<?>>(List.of(patientCriterion, organizationCriterion));
-        if(onlyActiveCarePlans) {
+        if (onlyActiveCarePlans) {
             var statusCriterion = CarePlan.STATUS.exactly().code(CarePlan.CarePlanStatus.ACTIVE.toCode());
             criteria.add(statusCriterion);
         }
@@ -84,32 +81,44 @@ public class FhirClient {
         return lookupCarePlansByCriteria(criteria);
     }
 
-    
-    public FhirLookupResult lookupCarePlans(Optional<String> cpr,Instant unsatisfiedToDate, boolean onlyActiveCarePlans,boolean onlyUnSatisfied) throws ServiceException {
+    public FhirLookupResult lookupCarePlans(Instant unsatisfiedToDate, boolean onlyActiveCarePlans, boolean onlyUnSatisfied) throws ServiceException {
 
+        var criteria = createCriteria(unsatisfiedToDate, onlyActiveCarePlans, onlyUnSatisfied);
+
+        var sortSpec = new SortSpec(SearchParameters.CAREPLAN_SATISFIED_UNTIL, SortOrderEnum.ASC);
+
+        return lookupCarePlansByCriteria(criteria, Optional.of(sortSpec));
+    }
+
+    @NotNull
+    private ArrayList<ICriterion<?>> createCriteria(Instant unsatisfiedToDate, boolean onlyActiveCarePlans, boolean onlyUnSatisfied) throws ServiceException {
         var organizationCriterion = buildOrganizationCriterion();
         var criteria = new ArrayList<ICriterion<?>>(List.of(organizationCriterion));
 
         // The criterion expresses that the careplan must no longer be satisfied at the given point in time.
-        if(onlyUnSatisfied){
+        if (onlyUnSatisfied) {
             var satisfiedUntilCriterion = new DateClientParam(SearchParameters.CAREPLAN_SATISFIED_UNTIL).before().millis(Date.from(unsatisfiedToDate));
             criteria.add(satisfiedUntilCriterion);
         }
 
-        if(onlyActiveCarePlans) {
+        if (onlyActiveCarePlans) {
             var statusCriterion = CarePlan.STATUS.exactly().code(CarePlan.CarePlanStatus.ACTIVE.toCode());
             criteria.add(statusCriterion);
         }
+        return criteria;
+    }
 
-        if(cpr.isPresent()){
-            Optional<Patient> patient = lookupPatientByCpr(cpr.get());
-            if(patient.isEmpty()) {
-                return FhirLookupResult.fromResources();
-            }
-            String patientId = patient.get().getIdElement().toUnqualifiedVersionless().toString();
-            var patientCriterion = CarePlan.PATIENT.hasId(patientId);
-            criteria.add(patientCriterion);
+    public FhirLookupResult lookupCarePlans(String cpr, Instant unsatisfiedToDate, boolean onlyActiveCarePlans, boolean onlyUnSatisfied) throws ServiceException {
+
+        var criteria = createCriteria(unsatisfiedToDate, onlyActiveCarePlans, onlyUnSatisfied);
+
+        Optional<Patient> patient = lookupPatientByCpr(cpr);
+        if (patient.isEmpty()) {
+            return FhirLookupResult.fromResources();
         }
+        String patientId = patient.get().getIdElement().toUnqualifiedVersionless().toString();
+        var patientCriterion = CarePlan.PATIENT.hasId(patientId);
+        criteria.add(patientCriterion);
 
         var sortSpec = new SortSpec(SearchParameters.CAREPLAN_SATISFIED_UNTIL, SortOrderEnum.ASC);
 
@@ -123,17 +132,18 @@ public class FhirClient {
     }
 
     public Optional<Organization> lookupOrganizationBySorCode(String sorCode) throws ServiceException {
-        if(sorCode == null || sorCode.isBlank() || sorCode.isEmpty()) throw new ServiceException("The SOR-code was not specified", ErrorKind.BAD_REQUEST, ErrorDetails.MISSING_SOR_CODE);
+        if (sorCode == null || sorCode.isBlank() || sorCode.isEmpty())
+            throw new ServiceException("The SOR-code was not specified", ErrorKind.BAD_REQUEST, ErrorDetails.MISSING_SOR_CODE);
         var sorCodeCriterion = Organization.IDENTIFIER.exactly().systemAndValues(Systems.SOR, sorCode);
 
         var lookupResult = lookupOrganizationsByCriteria(List.of(sorCodeCriterion));
-        if(lookupResult.getOrganizations().isEmpty()) {
+        if (lookupResult.getOrganizations().isEmpty()) {
             return Optional.empty();
         }
-        if(lookupResult.getOrganizations().size() > 1) {
+        if (lookupResult.getOrganizations().size() > 1) {
             throw new IllegalStateException(String.format("Could not lookup single resource of %s!", Organization.class));
         }
-        return Optional.of(lookupResult.getOrganizations().get(0));
+        return Optional.of(lookupResult.getOrganizations().getFirst());
     }
 
     public Optional<Patient> lookupPatientById(String patientId) {
@@ -178,13 +188,13 @@ public class FhirClient {
         return lookupQuestionnaireResponseByCriteria(List.of(questionnaireCriterion, basedOnCriterion));
     }
 
-    public List<Questionnaire> lookupVersionsOfQuestionnaireById(List<String> ids){
+    public List<Questionnaire> lookupVersionsOfQuestionnaireById(List<String> ids) {
 
         IGenericClient client = context.newRestfulGenericClient(endpoint);
 
         List<Questionnaire> resources = new LinkedList<>();
 
-        ids.forEach( id -> {
+        ids.forEach(id -> {
             Bundle bundle = client.history().onInstance(new IdType("Questionnaire", id)).returnBundle(Bundle.class).execute();
             bundle.getEntry().stream().filter(bec -> bec.getResource() != null).forEach(x -> resources.add((Questionnaire) x.getResource()));
         });
@@ -224,7 +234,7 @@ public class FhirClient {
         addOrganizationTag(bundle);
 
         var id = saveInTransaction(bundle, ResourceType.CarePlan);
-        if(id.isEmpty()) {
+        if (id.isEmpty()) {
             throw new IllegalStateException("Could not locate location-header in response when executing transaction.");
         }
         return id.get();
@@ -261,8 +271,8 @@ public class FhirClient {
         var criterias = new ArrayList<ICriterion<?>>();
         criterias.add(organizationCriterion);
 
-        if(!statusesToInclude.isEmpty()){
-            Collection<String> statusesToIncludeToLowered = statusesToInclude.stream().map(String::toLowerCase).collect(Collectors.toList()); //status should be to lowered
+        if (!statusesToInclude.isEmpty()) {
+            Collection<String> statusesToIncludeToLowered = statusesToInclude.stream().map(String::toLowerCase).toList(); //status should be to lowered
             var statusCriteron = PlanDefinition.STATUS.exactly().codes(statusesToIncludeToLowered);
             criterias.add(statusCriteron);
         }
@@ -274,8 +284,8 @@ public class FhirClient {
         var organizationCriterion = buildOrganizationCriterion();
         criterias.add(organizationCriterion);
 
-        if(!statusesToInclude.isEmpty()){
-            Collection<String> statusesToIncludeToLowered = statusesToInclude.stream().map(String::toLowerCase).collect(Collectors.toList()); //status should be to lowered
+        if (!statusesToInclude.isEmpty()) {
+            Collection<String> statusesToIncludeToLowered = statusesToInclude.stream().map(String::toLowerCase).toList(); //status should be to lowered
             var statusCriteron = Questionnaire.STATUS.exactly().codes(statusesToIncludeToLowered);
             criterias.add(statusCriteron);
         }
@@ -313,7 +323,7 @@ public class FhirClient {
 
         // The FhirLookupResult includes the patient- and plandefinition-resources that we need,
         // but due to limitations of the FHIR server, not the questionnaire-resources. Se wo look up those in a separate call.
-        if(carePlanResult.getCarePlans().isEmpty()) {
+        if (carePlanResult.getCarePlans().isEmpty()) {
             return carePlanResult;
         }
 
@@ -336,13 +346,13 @@ public class FhirClient {
     private Optional<Patient> lookupPatient(List<ICriterion<?>> criterion) {
         var lookupResult = lookupByCriteria(Patient.class, criterion);
 
-        if(lookupResult.getPatients().isEmpty()) {
+        if (lookupResult.getPatients().isEmpty()) {
             return Optional.empty();
         }
-        if(lookupResult.getPatients().size() > 1) {
+        if (lookupResult.getPatients().size() > 1) {
             throw new IllegalStateException(String.format("Could not lookup single resource of class %s!", Patient.class));
         }
-        return Optional.of(lookupResult.getPatients().get(0));
+        return Optional.of(lookupResult.getPatients().getFirst());
     }
 
     private FhirLookupResult lookupPlanDefinitionsByCriteria(List<ICriterion<?>> criteria) {
@@ -355,7 +365,7 @@ public class FhirClient {
 
         // We also need the planDefinitions, which are found by following the chain QuestionnaireResponse.based-on -> CarePlan.instantiates-canonical.
         // This requires a separate lookup.
-        if(questionnaireResponseResult.getQuestionnaireResponses().isEmpty()) {
+        if (questionnaireResponseResult.getQuestionnaireResponses().isEmpty()) {
             return questionnaireResponseResult;
         }
 
@@ -379,37 +389,37 @@ public class FhirClient {
         return carePlans
                 .stream()
                 .flatMap(cp -> cp.getActivity().stream().map(a -> getQuestionnaireId(a.getDetail())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> getQuestionnaireIdsFromPlanDefinition(List<PlanDefinition> planDefinitions) {
         return planDefinitions
                 .stream()
                 .flatMap(pd -> pd.getAction().stream().map(a -> a.getDefinitionCanonicalType().getValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> getPlanDefinitionIds(List<CarePlan> carePlans) {
         return carePlans
                 .stream()
                 .flatMap(cp -> cp.getInstantiatesCanonical().stream().map(PrimitiveType::getValue))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> getPractitionerIds(List<QuestionnaireResponse> questionnaireResponses) {
         return questionnaireResponses
-            .stream()
-            .map(qr -> ExtensionMapper.tryExtractExaminationAuthorPractitionerId(qr.getExtension()))
-            .filter(Objects::nonNull)
-            .distinct()
-            .collect(Collectors.toList());
+                .stream()
+                .map(qr -> ExtensionMapper.tryExtractExaminationAuthorPractitionerId(qr.getExtension()))
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
     }
 
     private String getQuestionnaireId(CarePlan.CarePlanActivityDetailComponent detail) {
-        if(detail.getInstantiatesCanonical() == null || detail.getInstantiatesCanonical().size() != 1) {
+        if (detail.getInstantiatesCanonical() == null || detail.getInstantiatesCanonical().size() != 1) {
             throw new IllegalStateException("Expected InstantiatesCanonical to be present, and to contain exactly one value!");
         }
-        return detail.getInstantiatesCanonical().get(0).getValue();
+        return detail.getInstantiatesCanonical().getFirst().getValue();
     }
 
     private <T extends Resource> FhirLookupResult lookupByCriteria(Class<T> resourceClass, List<ICriterion<?>> criteria) {
@@ -427,37 +437,37 @@ public class FhirClient {
         var query = client
                 .search()
                 .forResource(resourceClass);
-        if(criteria != null && !criteria.isEmpty()) {
-            query = query.where(criteria.get(0));
-            for(int i = 1; i < criteria.size(); i++) {
+        if (criteria != null && !criteria.isEmpty()) {
+            query = query.where(criteria.getFirst());
+            for (int i = 1; i < criteria.size(); i++) {
                 query = query.and(criteria.get(i));
             }
         }
-        if(includes != null) {
-            for(var include : includes) {
+        if (includes != null) {
+            for (var include : includes) {
                 query = query.include(include);
             }
         }
-        if(sortSpec.isPresent()) {
+        if (sortSpec.isPresent()) {
             query = query.sort(sortSpec.get());
         }
-        if(offset.isPresent()) {
+        if (offset.isPresent()) {
             query = query.offset(offset.get());
         }
-        if(count.isPresent()) {
+        if (count.isPresent()) {
             query = query.count(count.get());
         }
 
         Bundle bundle = (Bundle) query.execute();
         FhirLookupResult lookupResult = FhirLookupResult.fromBundle(bundle);
-        if(withOrganizations) {
+        if (withOrganizations) {
             List<String> organizationIds = lookupResult.values()
                     .stream()
                     .map(r -> ExtensionMapper.tryExtractOrganizationId(r.getExtension()))
                     .filter(Optional::isPresent)
                     .map(Optional::get)
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
             lookupResult = lookupResult.merge(lookupOrganizations(organizationIds));
         }
@@ -476,7 +486,7 @@ public class FhirClient {
         IGenericClient client = context.newRestfulGenericClient(endpoint);
 
         MethodOutcome outcome = client.create().resource(resource).execute();
-        if(!outcome.getCreated()) {
+        if (!outcome.getCreated()) {
             throw new IllegalStateException(String.format("Tried to create resource of type %s, but it was not created!", resource.getResourceType().name()));
         }
         return outcome.getId().toUnqualifiedVersionless().getIdPart();
@@ -490,15 +500,15 @@ public class FhirClient {
 
         // Look for an entry with status 201 to retrieve the location-header.
         var id = "";
-        for(var responseEntry : responseBundle.getEntry()) {
+        for (var responseEntry : responseBundle.getEntry()) {
             var status = responseEntry.getResponse().getStatus();
             var location = responseEntry.getResponse().getLocation();
-            if(status.startsWith("201") && location.startsWith(resourceType.toString())) {
+            if (status.startsWith("201") && location.startsWith(resourceType.toString())) {
                 id = location.replaceFirst("/_history.*$", "");
             }
         }
 
-        if(id.isEmpty()) {
+        if (id.isEmpty()) {
             return Optional.empty();
         }
         return Optional.of(id);
@@ -510,28 +520,27 @@ public class FhirClient {
     }
 
     private void addOrganizationTag(Resource resource) throws ServiceException {
-        if(resource.getResourceType() == ResourceType.Bundle) {
+        if (resource.getResourceType() == ResourceType.Bundle) {
             addOrganizationTag((Bundle) resource);
         }
-        if(resource instanceof DomainResource) {
+        if (resource instanceof DomainResource) {
             addOrganizationTag((DomainResource) resource);
-        }
-        else {
+        } else {
             throw new IllegalArgumentException(String.format("Trying to add organization tag to resource %s, but the resource was of incorrect type %s!", resource.getId(), resource.getResourceType()));
         }
     }
 
     private void addOrganizationTag(Bundle bundle) throws ServiceException {
-        for(var entry : bundle.getEntry()) {
+        for (var entry : bundle.getEntry()) {
             addOrganizationTag(entry.getResource());
         }
     }
 
     private void addOrganizationTag(DomainResource extendable) throws ServiceException {
-        if(excludeFromOrganizationTagging(extendable)) {
+        if (excludeFromOrganizationTagging(extendable)) {
             return;
         }
-        if(extendable.getExtension().stream().anyMatch(e -> e.getUrl().equals(Systems.ORGANIZATION))) {
+        if (extendable.getExtension().stream().anyMatch(e -> e.getUrl().equals(Systems.ORGANIZATION))) {
             throw new IllegalArgumentException(String.format("Trying to add organization tag to resource, but the tag was already present! - %S", extendable.getId()));
         }
 
@@ -556,18 +565,17 @@ public class FhirClient {
 
     public Organization getCurrentUsersOrganization() throws ServiceException {
         var context = userContextProvider.getUserContext();
-        if(context == null) {
+        if (context == null) {
             throw new IllegalStateException("UserContext was not initialized!");
         }
-        return lookupOrganizationBySorCode(context.getOrgId()).orElseThrow(() -> new ServiceException(String.format("No Organization was present for sorCode %s!", context.getOrgId()), ErrorKind.BAD_REQUEST, ErrorDetails.MISSING_SOR_CODE));
-
-
+        // TODO: Handle 'Optional.get()' without 'isPresent()' check below
+        return lookupOrganizationBySorCode(context.getOrgId().get()).orElseThrow(() -> new ServiceException(String.format("No Organization was present for sorCode %s!", context.getOrgId()), ErrorKind.BAD_REQUEST, ErrorDetails.MISSING_SOR_CODE));
     }
 
     public Practitioner getOrCreateUserAsPractitioner() throws ServiceException {
-
-        String orgId = userContextProvider.getUserContext().getOrgId();
-        String userId = userContextProvider.getUserContext().getUserId();
+        // TODO: Handle 'Optional.get()' without 'isPresent()' check below
+        String orgId = userContextProvider.getUserContext().getOrgId().get();
+        String userId = userContextProvider.getUserContext().getUserId().get();
 
         ICriterion<TokenClientParam> sorIdentifier = Practitioner.IDENTIFIER.exactly().systemAndIdentifier(Systems.SOR, orgId);
         ICriterion<TokenClientParam> userIdIdentifier = Practitioner.IDENTIFIER.exactly().systemAndIdentifier(Systems.USER_ID, userId);
@@ -576,13 +584,14 @@ public class FhirClient {
 
         if (practitioner.isPresent()) {
             return practitioner.get();
-        }
-        else {
+        } else {
             Practitioner p = new Practitioner();
             p.addIdentifier().setSystem(Systems.SOR).setValue(orgId);
             p.addIdentifier().setSystem(Systems.USER_ID).setValue(userId);
-            p.getNameFirstRep().addGiven(userContextProvider.getUserContext().getFirstName());
-            p.getNameFirstRep().setFamily(userContextProvider.getUserContext().getLastName());
+
+            // TODO: Handle 'Optional.get()' without 'isPresent()' check below
+            p.getNameFirstRep().addGiven(userContextProvider.getUserContext().getFirstName().get());
+            p.getNameFirstRep().setFamily(userContextProvider.getUserContext().getLastName().get());
 
             String practitionerId = save(p);
             return lookupPractitionerById(practitionerId).get();
@@ -603,13 +612,13 @@ public class FhirClient {
     private Optional<Practitioner> lookupPractitioner(List<ICriterion<?>> criterions) {
         var lookupResult = lookupByCriteria(Practitioner.class, criterions);
 
-        if(lookupResult.getPractitioners().isEmpty()) {
+        if (lookupResult.getPractitioners().isEmpty()) {
             return Optional.empty();
         }
-        if(lookupResult.getPractitioners().size() > 1) {
+        if (lookupResult.getPractitioners().size() > 1) {
             throw new IllegalStateException(String.format("Could not lookup single resource of class %s!", Practitioner.class));
         }
-        return Optional.of(lookupResult.getPractitioners().get(0));
+        return Optional.of(lookupResult.getPractitioners().getFirst());
     }
 
     public FhirLookupResult lookupPractitioners(Collection<String> practitionerIds) {
